--- a/mockup_app/src/main/res/values/strings.xml
+++ b/mockup_app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Real_app_mockup</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">Whizm</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_splash_screen">Whizm</string>
+    <string name="title_activity_config">ConfigActivity</string>
+    <string name="title_activity_stats">StatsActivity</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
