--- a/mockup_app/src/main/res/values/strings.xml
+++ b/mockup_app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="title_activity_config">ConfigActivity</string>
     <string name="title_activity_stats">StatsActivity</string>
     <string name="hello_world">Hello world!</string>
+    <string name="amountShared">amountShared</string>
 
 </resources>
